[package]
name = "without_div_sym"
version = "0.1.0"
edition = "2021"
description = "A fun program to divide between two numbers without the division sign. using some bit wise operation."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
